# loyalty-app

./: .env.example  .env.production.example  .eslintrc.best-practices.js  .gitignore  ADMIN_EMAIL_PRIVACY_IMPROVEMENT_REPORT.md  API-SPECIFICATIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_SURVEY_E2E_TEST_REPORT.md  CONTRIBUTING.md  DATABASE_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEV-PLAN.md  DEV_SETUP.md  DOCKER_COMPOSE_MODERNIZATION.md  DOMAIN_ACCESS_FIX.md  ENVIRONMENT.md  ENV_CONFIGURATION.md  ENV_FILE_FIX_SUMMARY.md  ESLINT_MIGRATION_PLAN.md  FAVICON_SETUP.md  GIT_HISTORY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL-DEV-SETUP.md  NEW_TIER_SYSTEM.md  OAUTH_SETUP.md  PHASE2-STATUS.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_MILESTONE.md  PIPELINE_CONSOLIDATION_SUMMARY.md  PRD.md  PRODUCTION_SCRIPTS_SUMMARY.md  README.md  SECURITY.md  SECURITY_WORKFLOW.md  SESSION_MANAGEMENT.md  STREAM_B_INTEGRATION_REPORT.md  (+148 more)
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml
backend-rust/.cargo/: audit.toml  config.toml
backend-rust/.sqlx/: README.md  query-027ebae849e085262d66723df878f63a499039b9fdf63a34ad86eaf06ac66080.json  query-047f2a38b7563352739cf7b967a153b955bc42ce2ec9ecc1d39ebb361145b4fb.json  query-052b8b33353f904dba4cb24b2f23e7bced422e805cd07de13bf90cd99856cfeb.json  query-05c42e3b619fb1c421cc4076168aade8b10db1d632e21a847e98576264b59083.json  query-09f7bfedaab50a038ccb8a847b3bdbe2ebfb1ca25bd7319c5d8a0172eed874b5.json  query-0ca3ddc8fc03d02c68222fc83affa81b5d7ce98e3328537007a55d50d86a3f77.json  query-0e7e2a117e56ec0ba026d0ff9f083bcd44c3feacf7ad2497a08952bda2a0ad54.json  query-11a0744aa798625c1c26f25fe6778b07a34b5b2cb32cf828d4e9365f255d1557.json  query-11f511105849cb33a68ff2d20a86d130eb82ce1365b2eb7a7a70fd8fc3f3268f.json  query-13ef7efd4b47af36ad85af7c5430ff386d6a07aebd8ddefc90848484e03f5395.json  query-14244a50ce526900b48df4db5965723c59550d450073466247915615ccead714.json  query-14cdc8e8ae90d5f4129194d94d08760de13de8465e746765dacc07c401e5848f.json  query-15a39698e80b7822af769ccbf53b239969040a5e0f892cc16c57c356f13dc7f4.json  query-1646950b024642eef99200386eadba736d5ea004bf2c7a4fc8bddc616be5d9b3.json  query-16769f994d5cf4d820150032b8aefe4799681cba1ac4009c13adcd4e53790a85.json  query-172f77c38169630d714b7f903b56d91998e9f6769683987e28a081dd9996107e.json  query-1877e719662fc7fd571c495542645f1bc46e3463f0698d0b9ea86700408ee3fa.json  query-18a531ef08dd88c34ef21ea3cce63f8599dddf2642ae789f50520d6c8c0ffdf2.json  query-19f5a298ec1279f907b24a2a9582cd781bfcb719e4d4d82e736956b92d2c76b5.json  query-1b6f34bf1f6298733c58d1f34c28e5f2db80bbf02e7883760e3ed3b074fa24ff.json  query-1cd49cdfb0d301cefaa231e1b7b627bdf66897975a81f57ea6c47509abdd4a10.json  query-1dcafeceec661fa562012ccf42de87a180bb9a0208df2331403584ff5bee16d8.json  query-1dfd40a4710769c4da55146472fbd16411c00856e9191cc0470b509bdb6ad659.json  query-1e6c0df1581c99b2b73acbd6c973f7ad87ea03042a8aa09522a2e9ca191fe3c7.json  query-1fa4bf35f85c5f698e32103f429bc38b2850106bbbac5b237c946ca9faa1ae74.json  query-206f298d70ed0627ce2c3a69e375b2462662792b86b6be6cb21de5a4a6b3017e.json  query-20740d29b65043066c20502c53c4570126a5ebc44f9e668486172812514eb578.json  query-20faf148c41384a0534be9fd7916dfd7cae13202a00860f92ea2c18c8eaa023d.json  query-212e5fd8adb2ebc45254eea22e36186bec3a14394e99d680fe27c365a46b1320.json  query-214499e94fed179117631c268f19a00f0f84b0ab8781f5cf70903b232c5f8db0.json  query-218f4fc5d567a35145f7b4fe7de7a8bf11910eb749691b269f03f542f6001801.json  query-245b2fe4b0f0033bd7caefb41eb86966c9650839e84056dacc8fd22ca0b35b72.json  query-248cbe1a17ccf381d16003e4989e165b7d9ffb914f0aecae8419ce425fcffcbe.json  query-24a8eec43365f74fabdac61bcad9c7d345a8597e5e339b31f2dffd675c10311e.json  query-24ed8d79610b9ce8ceee48532cbdc75e0c03ce9cad3bbf4cca16eb3ff1b4b3b4.json  query-2bdf094d2135213bfcd98390c0f50a615969868b68f26b33f71597fed6799664.json  query-2ddc909044e0a4609712ff921b8a2a4db0d47eab62b591a272034ea95e1cc168.json  query-2e08085ab0ddbf3ebaf353b618e9c1d1fc04c39751aa946c2893e44619223743.json  query-3051f9c84ea576fac680595cd61321a7b13f6a06cd4aed4b759a36f584820ec7.json  (+167 more)
backend-rust/config/: admins.json
backend-rust/migrations/: .gitkeep  20240101000000_init.sql  20260511000000_booking_slips.sql  20260512000000_room_management_columns.sql  20260512020000_booking_admin_fields.sql  20260513000000_users_email_unique.sql  20260513010000_idempotency_keys.sql  20260513020000_bookings_no_overlap.sql  README.md
backend-rust/scripts/: README.md  generate-client.sh  regen-sqlx-cache.sh
backend-rust/src/: error.rs  lib.rs  main.rs  openapi.rs  state.rs
backend-rust/src/config/: mod.rs
backend-rust/src/db/: migrations.rs  mod.rs  seed.rs
backend-rust/src/middleware/: admin.rs  auth.rs  cors.rs  mod.rs  rate_limit.rs
backend-rust/src/models/: booking.rs  coupon.rs  mod.rs  notification.rs  password_reset.rs  points_transaction.rs  survey.rs  tier.rs  user.rs  user_loyalty.rs  user_profile.rs
backend-rust/src/redis/: mod.rs
backend-rust/src/routes/: admin.rs  admin_bookings.rs  admin_email.rs  admin_rooms.rs  admin_slips.rs  analytics.rs  auth.rs  bookings.rs  coupons.rs  csrf.rs  health.rs  loyalty.rs  membership.rs  mod.rs  notifications.rs  oauth.rs  payments.rs  slips.rs  sse.rs  storage.rs  surveys.rs  translation.rs  users.rs
backend-rust/src/services/: auth.rs  booking.rs  coupon.rs  email.rs  idempotency.rs  loyalty.rs  (+10 more)
backend-rust/tests/: lib.rs
(+10160 files in other folders)
