[package]
name = "loyalty-backend"
version = "0.1.0"
edition = "2021"
authors = ["Loyalty App Team"]
description = "Rust backend for the Loyalty App"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "timeout", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
async-imap = "0.9"
async-native-tls = "0.5"
regex-lite = "0.1"

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
mime = "0.3"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

# SSE support
tokio-util = { version = "0.7", features = ["io"] }

# Lazy initialization
once_cell = "1"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "2.9", features = ["derive"] }
once_cell = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rust_decimal_macros = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
